
 OpenSSL CHANGES
 _______________

 Changes between 0.9.8e and 0.9.8f-fips  [xx XXX xxxx]

  *) Modify VC++ build system to rename .text and .rdata segments in
     FIPS sources to .fipst${a,b,c}, and $fipsr${a,b,c} and place them
     in a static library fipscanister.lib using a perl script. These are
     then combined by the VC++ linker into a single segment in suffix
     order but without the suffix (i.e. .fipstx, .fipsrd and .fipsda).
     This serves the same purpose as fipscanister.o on other platforms
     but has the advantage that it can be created using only standard VC++
     utilities.
     [Steve Henson and Andy Polyakov]

  *) Modify WIN32 build system to forward references functions implemented
     in FIPS DLL. 
     [Steve Henson]

  *) Move error library so that all lhash dependencies are in a separate
     file. Include a simplified ERR_get_state() function for stand alone
     FIPS applications. Include a initialization function OPENSSL_init()
     to set all callbacks, automatically call OPENSSL_init() once when
     a cipher or digest is added. This should mean that almost all applications
     set the callbacks automatically. Exceptional cases can call OPENSSL_init()
     manually like this:

#ifdef OPENSSL_HAVE_INIT
    OPENSSL_init();
#endif
     before starting any threads.
     [Steve Henson]

  *) Collect common functions into header file "fips_utl.h".
     [Steve Henson]

  *) Only enable dynamic lock functionality in CRYPTO_lock() when it is really
     needed. Move some lock functionality into new file dyn_lck.c .
     This further reduces FIPS dependencies allowing the complete removal
     of STACK and OBJ_bsearch().
     [Steve Henson]

  *) Reduce FIPS test program dependencies by providing stand alone
     versions of some existing functions in libcrypto. Avoid use
     of BIOs by converting to system stdio. Move some functions in FIPS
     files: e.g. all use of BIO_printf().
     [Steve Henson]
