@@ -68,6 +68,8 @@
 #include <openssl/dsa.h>
 #endif
 
+#ifndef OPENSSL_FIPS
+
 static int init(EVP_MD_CTX *ctx)
 	{ return SHA1_Init(ctx->md_data); }
 
@@ -82,7 +84,7 @@ static const EVP_MD dss1_md=
 	NID_dsa,
 	NID_dsaWithSHA1,
 	SHA_DIGEST_LENGTH,
-	EVP_MD_FLAG_FIPS,
+	0,
 	init,
 	update,
 	final,
@@ -97,4 +99,5 @@ const EVP_MD *EVP_dss1(void)
 	{
 	return(&dss1_md);
 	}
+#endif
 #endif
