@@ -68,14 +68,7 @@
 #include <openssl/rsa.h>
 #endif
 
-#ifdef OPENSSL_FIPS
-#define EVP_PKEY_RSA_fips_method \
-				(evp_sign_method *)FIPS_rsa_sign, \
-				(evp_verify_method *) FIPS_rsa_verify, \
-				{EVP_PKEY_RSA,EVP_PKEY_RSA2,0,0}
-#else
-#define EVP_PKEY_RSA_fips_method EVP_PKEY_RSA_method
-#endif
+#ifndef OPENSSL_FIPS
 
 static int init(EVP_MD_CTX *ctx)
 	{ return SHA1_Init(ctx->md_data); }
@@ -91,13 +84,13 @@ static const EVP_MD sha1_md=
 	NID_sha1,
 	NID_sha1WithRSAEncryption,
 	SHA_DIGEST_LENGTH,
-	EVP_MD_FLAG_FIPS,
+	0,
 	init,
 	update,
 	final,
 	NULL,
 	NULL,
-	EVP_PKEY_RSA_fips_method,
+	EVP_PKEY_RSA_method,
 	SHA_CBLOCK,
 	sizeof(EVP_MD *)+sizeof(SHA_CTX),
 	};
@@ -106,7 +99,6 @@ const EVP_MD *EVP_sha1(void)
 	{
 	return(&sha1_md);
 	}
-#endif
 
 #ifndef OPENSSL_NO_SHA256
 static int init224(EVP_MD_CTX *ctx)
@@ -128,13 +120,13 @@ static const EVP_MD sha224_md=
 	NID_sha224,
 	NID_sha224WithRSAEncryption,
 	SHA224_DIGEST_LENGTH,
-	EVP_MD_FLAG_FIPS,
+	0,
 	init224,
 	update256,
 	final256,
 	NULL,
 	NULL,
-	EVP_PKEY_RSA_fips_method,
+	EVP_PKEY_RSA_method,
 	SHA256_CBLOCK,
 	sizeof(EVP_MD *)+sizeof(SHA256_CTX),
 	};
@@ -147,13 +139,13 @@ static const EVP_MD sha256_md=
 	NID_sha256,
 	NID_sha256WithRSAEncryption,
 	SHA256_DIGEST_LENGTH,
-	EVP_MD_FLAG_FIPS,
+	0,
 	init256,
 	update256,
 	final256,
 	NULL,
 	NULL,
-	EVP_PKEY_RSA_fips_method,
+	EVP_PKEY_RSA_method,
 	SHA256_CBLOCK,
 	sizeof(EVP_MD *)+sizeof(SHA256_CTX),
 	};
@@ -178,13 +170,13 @@ static const EVP_MD sha384_md=
 	NID_sha384,
 	NID_sha384WithRSAEncryption,
 	SHA384_DIGEST_LENGTH,
-	EVP_MD_FLAG_FIPS,
+	0,
 	init384,
 	update512,
 	final512,
 	NULL,
 	NULL,
-	EVP_PKEY_RSA_fips_method,
+	EVP_PKEY_RSA_method,
 	SHA512_CBLOCK,
 	sizeof(EVP_MD *)+sizeof(SHA512_CTX),
 	};
@@ -197,13 +189,13 @@ static const EVP_MD sha512_md=
 	NID_sha512,
 	NID_sha512WithRSAEncryption,
 	SHA512_DIGEST_LENGTH,
-	EVP_MD_FLAG_FIPS,
+	0,
 	init512,
 	update512,
 	final512,
 	NULL,
 	NULL,
-	EVP_PKEY_RSA_fips_method,
+	EVP_PKEY_RSA_method,
 	SHA512_CBLOCK,
 	sizeof(EVP_MD *)+sizeof(SHA512_CTX),
 	};
@@ -211,3 +203,7 @@ static const EVP_MD sha512_md=
 const EVP_MD *EVP_sha512(void)
 	{ return(&sha512_md); }
 #endif	/* ifndef OPENSSL_NO_SHA512 */
+
+#endif
+
+#endif
